--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./app/*"],
-      "@/providers": ["./app/_providers/*"],
-      "@/components": ["./app/_primitives/components/*"]
+      "@/lib/*": ["./app/_lib/*"],
+      "@/providers/*": ["./app/_providers/*"],
+      "@/primitives/*": ["./app/_primitives/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
