--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.7.3",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.7",
@@ -21,6 +22,8 @@
     "jotai": "^2.15.0",
     "lucide-react": "^0.546.0",
     "next": "15.5.9",
+    "negotiator": "^1.0.0",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
