--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "clsx": "^2.1.1",
     "jotai": "^2.15.0",
     "lucide-react": "^0.546.0",
-    "next": "15.5.9",
     "negotiator": "^1.0.0",
-    "next": "15.5.4",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
@@ -35,8 +34,8 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
